@@ -52,9 +52,19 @@ class Points extends BaseActiveModule
 		parent::__construct(&$bot, get_class($this));
 
 		$this -> bot -> db -> query("CREATE TABLE IF NOT EXISTS " . $this -> bot -> db -> define_tablename("raid_points", "true") . "
-				(id INT NOT NULL AUTO_INCREMENT PRIMARY KEY,
+				(id INT NOT NULL PRIMARY KEY,
+				nickname VARCHAR(20),
 				points decimal(11,2) default '0.00',
-				raiding TINYINT DEFAULT '0')");
+				raiding TINYINT DEFAULT '0',
+				raidingas VARCHAR(20))");
+
+		$this -> bot -> db -> query("CREATE TABLE IF NOT EXISTS " . $this -> bot -> db -> define_tablename("raid_points_log", "true") . "
+				(id INT NOT NULL AUTO_INCREMENT PRIMARY KEY,
+				name VARCHAR(20),
+				points decimal(11,2) default '0.00',
+				by_who VARCHAR(20),
+				time INT,
+				why VARCHAR(500))");
 
 		$this -> update_table();
 
@@ -65,7 +75,7 @@ class Points extends BaseActiveModule
 		$this -> help['command']['points [name]']="Shows the amount of points in [name]s account. If [name] is not given it shows the points in your account";
 		$this -> help['command']['points give <name> <points>']="Gives <points> points to player <name>";
 		$this -> help['command']['points add <name> <points>'] = "Adds <points> points to player <name>s point account";
-		$this -> help['command']['points del <name> <points>'] = "Removes <points> points from player <name>s point account";
+		$this -> help['command']['points [del/rem] <name> <points>'] = "Removes <points> points from player <name>s point account";
 		$this -> help['command']['points transfer <(on|off)>'] = "Turns ability to give points on or off.";
 		$this -> help['command']['points tomain <(on|off)>'] = "Turns ability to give points from alts to main on or off.";
 		$this -> help['command']['points all'] = "Shows the combined number of points on your main and alts.";
@@ -77,7 +87,7 @@ class Points extends BaseActiveModule
 
 	function update_table()
 	{
-		if ($this -> bot -> db -> get_version("raid_points") == 2)
+		if ($this -> bot -> db -> get_version("raid_points") == 4)
 		{
 			return;
 		}
@@ -101,9 +111,42 @@ class Points extends BaseActiveModule
 					$this -> bot -> db -> query("UPDATE #___raid_points SET points = points / 10");
 				}
 			case 2:
+				$this -> bot -> db -> update_table("raid_points", "nickname", "add",
+					"ALTER IGNORE TABLE #___raid_points ADD nickname VARCHAR(20) DEFAULT '' after id");
+				$users = $this -> bot -> db -> select("SELECT id from #___raid_points");
+				if(!empty($users))
+				{
+					foreach($users as $id)
+					{
+						$nick = $this -> bot -> db -> select("SELECT nickname from #___users WHERE id = ".$id[0]);
+						if(empty($nick))
+						{
+							$nick = $this -> bot -> db -> select("SELECT nickname from #___whois WHERE id = ".$id[0]);
+							if(empty($nick))
+							{
+								//$getnames = TRUE;
+							}
+							else
+							{
+								$nick = $nick[0][0];
+							}
+						}
+						else
+						{
+							$nick = $nick[0][0];
+						}
+						if($nick)
+						{
+							$this -> bot -> db -> query("UPDATE #___raid_points SET nickname = '$nick' WHERE id = ".$id[0]);
+						}
+					}
+				}
+			case 3:
+				$this -> bot -> db -> update_table("raid_points", "raidingas", "add",
+					"ALTER IGNORE TABLE #___raid_points ADD raidingas VARCHAR(20) DEFAULT '' after raiding");
 			default:
 		}
-		$this -> bot -> db -> set_version("raid_points", 2);
+		$this -> bot -> db -> set_version("raid_points", 4);
 	}
 
 	/*
@@ -111,18 +154,18 @@ class Points extends BaseActiveModule
 	*/
 	function command_handler($name, $msg, $origin)
 	{
-		$msg = explode(" ", $msg, 4);
-		Switch($msg[1])
+		$msg = explode(" ", $msg, 5);
+		Switch(strtolower($msg[1]))
 		{
 			case 'give':
 				$this -> give_points($name, $msg[2], $info[3]);
 				Break;
 			case 'add':
-				$this -> add_points($name, $msg[2], $msg[3]);
+				$this -> add_points($name, $msg[2], $msg[3], $msg[4]);
 				Break;
 			case 'del':
 			case 'rem':
-				$this -> rem_points($name, $msg[2], $msg[3]);
+				$this -> rem_points($name, $msg[2], $msg[3], $msg[4]);
 				Break;
 			case 'transfer':
 				$this -> transfer_points($name, $msg[2]);
@@ -136,6 +179,9 @@ class Points extends BaseActiveModule
 			case 'top':
 				$this -> top_points($name);
 				Break;
+			case 'log':
+			case 'logs':
+				Return $this -> view_log($name, $msg[2], $msg[3]);
 			case '':
 				$this -> show_points($name, false);
 				Break;
@@ -151,19 +197,23 @@ class Points extends BaseActiveModule
 	*/
 	function show_points($name, $target)
 	{
-		if (!$target)
+		if (!$target || strtolower($target) == strtolower($name))
 		{
 			$result = $this -> bot -> db -> select("SELECT points FROM #___raid_points WHERE id = " . $this -> points_to($name));
 			if ($result)
 			{
-				$points = $result[0][0];
+				if($result[0][2] == "")
+				{
+					$this -> bot -> db -> query("UPDATE #___raid_points SET nickname = '".$this -> points_to_name($name)."' WHERE id = " . $this -> points_to($name));
+				}
+				$points = $this -> round($result[0][0]);
 			}
 			else
 			{
 				$points = 0;
 			}
 
-			$this -> bot -> send_tell($name, "You have <font color=#ffff00>$points##end## raidpoints.");
+			$this -> bot -> send_tell($name, "You have ##highlight##$points##end## raidpoints.");
 		}
 		else
 		{
@@ -171,20 +221,24 @@ class Points extends BaseActiveModule
 			{
 				if (!$this -> bot -> core("chat") -> get_uid($target))
 				{
-					$this -> bot -> send_tell ($name, "Player <font color=#ffff00>$target##end## does not exist.");
+					$this -> bot -> send_tell ($name, "Player ##highlight##$target##end## does not exist.");
 				}
 				else
 				{
-					$result = $this -> bot -> db -> select("SELECT points FROM #___raid_points WHERE id = " . $this -> points_to($target));
+					$result = $this -> bot -> db -> select("SELECT points, nickname FROM #___raid_points WHERE id = " . $this -> points_to($target));
 					if ($result)
 					{
-						$points = $result[0][0];
+						if($result[0][1] == "")
+						{
+							$this -> bot -> db -> query("UPDATE #___raid_points SET nickname = '".$this -> points_to_name($target)."' WHERE id = " . $this -> points_to($target));
+						}
+						$points = $this -> round($result[0][0]);
 					}
 					else
 					{
 						$points = 0;
 					}
-					$this -> bot -> send_tell($name, "Player " . $target . " has <font color=#ffff00>$points##end## raidpoints.");
+					$this -> bot -> send_tell($name, "Player " . $target . " has ##highlight##$points##end## raidpoints.");
 				}
 			}
 			else
@@ -204,13 +258,18 @@ class Points extends BaseActiveModule
 	//	if ($this -> bot -> core("security") -> check_access($name, "superadmin"))
 	//	{
 			$this -> bot -> send_tell($name, "Fetching full list of points, this might take a while.");
-			$result = $this -> bot -> db -> select("SELECT nickname, points FROM #___raid_points, #___users WHERE #___raid_points.id = #___users.char_id AND NOT points = 0 ORDER BY points DESC");
+			$result = $this -> bot -> db -> select("SELECT nickname, points FROM #___raid_points WHERE points > 0 ORDER BY points DESC");
 			$inside = "##blob_title##:::: All raidpoints ::::##end####blob_text##\n\n";
 			if (!empty($result))
 			{
 				foreach ($result as $val)
 				{
-					$inside .= $val[0] . " ##blob_text##" . ($val[1]) . "##end##\n";
+					$space = "                    ";
+					$nl = "-".strlen($val[0]);
+					$nl = round($nl * 1.5);
+					$space = substr($space, 0, $nl);
+					$val[1] = $this -> round($val[1]);
+					$inside .= "##highlight##".$val[0] . "##end##$space - ##highlight##" . ($val[1]) . "##end##\n";
 				}
 			}
 
@@ -226,14 +285,19 @@ class Points extends BaseActiveModule
 	*/
 	function top_points($name)
 	{
-		$result = $this -> bot -> db -> select("SELECT nickname, points FROM #___raid_points, #___users WHERE #___raid_points.id = #___users.char_id AND NOT points = 0 ORDER BY points DESC LIMIT 0,25");
+		$result = $this -> bot -> db -> select("SELECT nickname, points FROM #___raid_points WHERE points > 0 ORDER BY points DESC LIMIT 25");
 		if (!empty($result))
 		{
 			$inside = "##blob_title##:::: Top 25 raidpoints ::::##end####blob_text##\n\n";
 			$num = 1;
 			foreach ($result as $val)
 			{
-				$inside .= "##blob_text##" . $num . ".##end## " . $val[0] . " ##blob_text##" . ($val[1]) . "##end##\n";
+				$space = "                    ";
+				$nl = "-".strlen($val[0]);
+				$nl = round($nl * 1.5);
+				$space = substr($space, 0, $nl);
+				$val[1] = $this -> round($val[1]);
+				$inside .= $num . ". ##highlight##".$val[0] . "##end##$space - ##highlight##" . ($val[1]) . "##end##\n";
 				$num++;
 			}
 			$this -> bot -> send_tell($name, "Top 25 raidpoints :: " . $this -> bot -> core("tools") -> make_blob("click to view", $inside));
@@ -258,39 +322,95 @@ class Points extends BaseActiveModule
 				$stat = TRUE;
 				$txt = "enabled";
 			}
+			if ($toggle == "check")
+			{
+				if(!$this -> bot -> core("settings") -> get("Points", "To_main"))
+				{
+					Return("ToMain is Off No Check Required");
+				}
+				else
+				{
+					$check = TRUE;
+				}
+			}
 			else
 			{
 				$stat = FALSE;
 				$txt = "disabled";
 			}
 
-			$this -> bot -> core("settings") -> save("Points", "To_main", $stat);
+			if(!$check)
+				$this -> bot -> core("settings") -> save("Points", "To_main", $stat);
 
 			$add = "";
 
-			if ($stat)
+			//if ($stat || $check)
 			{
-				$result = $this -> bot -> db -> select("SELECT id, points FROM #___raid_points WHERE points != 0");
+				$result = $this -> bot -> db -> select("SELECT id, nickname, points FROM #___raid_points WHERE points > 0");
 				foreach ($result as $res)
 				{
-					if ($res[0] != $this -> points_to($res[0]))
+					if ($res[0] != $this -> points_to($res[1]))
 					{
 						$this -> bot -> db -> query("UPDATE #___raid_points SET points = 0 WHERE id = " . $res[0]);
-						$resu = $this -> bot -> db -> select("SELECT points FROM #___raid_points WHERE id = " . $this -> points_to($res[0]));
+						$resu = $this -> bot -> db -> select("SELECT nickname, points FROM #___raid_points WHERE id = " . $this -> points_to($res[1]));
 						if (empty($resu))
-						$this -> bot -> db -> query("INSERT INTO #___raid_points (id, points, raiding) VALUES (" . $this -> points_to($res[0]) . ", " . $res[1] . ", 0)");
+							$this -> bot -> db -> query("INSERT INTO #___raid_points (id, nickname, points, raiding) VALUES (" . $this -> points_to($res[1]) . ", '".$this -> points_to_name($res[1])."', " . $res[2] . ", 0)");
 						else
-						$this -> bot -> db -> query("UPDATE #___raid_points SET points = " . ($res[1] + $resu[0][0]) . " WHERE id = " . $this -> points_to($res[0]));
+							$this -> bot -> db -> query("UPDATE #___raid_points SET points = " . ($res[2] + $resu[0][1]) . " WHERE id = " . $this -> points_to($res[0]));
 					}
 				}
 				$add = " All points have been transfered.";
 			}
 
-			$this -> bot -> send_tell($name, "Points going to the main character's account is now <font color=#ffff00>" .
-			$txt . "##end##." . $add);
+			if($check)
+				$this -> bot -> send_tell($name, $add);
+			else
+				$this -> bot -> send_tell($name, "Points going to the main character's account is now ##highlight##".$txt."##end##." . $add);
 		//}
 		//else
 		//$this -> bot -> send_tell($name, "You must be a superadmin to do this");
+	}
+	
+	function check_alts($main)
+	{
+		$alts = $this -> bot -> core("alts") -> get_alts($main);
+		if(!empty($alts))
+		{
+			foreach($alts as $alt)
+			{
+				$result = $this -> bot -> db -> select("SELECT id, nickname, beast_points, zods_points FROM #___raid_points WHERE (beast_points != 0 OR zods_points != 0) AND id = ".$this -> points_to($alt, FALSE));
+				if(!empty($result))
+				{
+					foreach ($result as $res)
+					{
+						if ($res[0] != $this -> points_to($res[1]))
+						{
+							$resu = $this -> bot -> db -> select("SELECT nickname, beast_points, zods_points FROM #___raid_points WHERE id = " . $this -> points_to($res[1]));
+							if (empty($resu))
+								$this -> bot -> db -> query("INSERT INTO #___raid_points (id, nickname, beast_points, zods_points, raiding) VALUES (" . $this -> points_to($res[1]) . ", '".$this -> points_to_name($res[1])."', " . $res[2] . ", " . $res[3] . ", 0)");
+							else
+								$this -> bot -> db -> query("UPDATE #___raid_points SET beast_points = " . ($res[2] + $resu[0][1]) . ", zods_points = " . ($res[3] + $resu[0][2]) . " WHERE id = " . $this -> points_to($res[0]));
+							$check = $this -> bot -> db -> select("SELECT nickname, beast_points, zods_points FROM #___raid_points WHERE id = " . $this -> points_to($res[1]));
+							if($check[0][1] != ($res[2] + $resu[0][1]) || $check[0][2] != ($res[3] + $resu[0][2]))
+							{
+								echo "Error With Transfering Points from Alt $alt to $main");
+							}
+							else
+							{
+								$this -> bot -> db -> query("UPDATE #___raid_points SET beast_points = 0, zods_points = 0 WHERE id = " . $res[0]);
+							}
+						}
+					}
+				}
+				$result = $this -> bot -> db -> select("SELECT id FROM #___raid_points WHERE raiding = 1 and id = ".$this -> points_to($alt, FALSE));
+				if(!empty($result))
+				{
+					$res = $result[0];
+					$this -> bot -> db -> query("UPDATE #___raid_points SET raiding = 0 WHERE id = " . $res[0]);
+					$this -> bot -> db -> query("UPDATE #___raid_points SET raiding = 1 WHERE id = " . $this -> points_to($alt));
+				}
+			}
+		}
 	}
 
 
@@ -315,7 +435,7 @@ class Points extends BaseActiveModule
 
 			$this -> bot -> core("settings") -> save("Points", "Transfer", $stat);
 
-			$this -> bot -> send_tell($name, "Transfering points has been <font color=#ffff00>" .
+			$this -> bot -> send_tell($name, "Transfering points has been ##highlight##" .
 			$txt . "##end##.");
 		}
 		else
@@ -345,28 +465,28 @@ class Points extends BaseActiveModule
 
 			if ($num > ($result[0][0]))
 			{
-				$this -> bot -> send_tell ($name, "You only have <font color=#ffff00>" . ($result[0][0]) . "##end## raid points.");
+				$this -> bot -> send_tell ($name, "You only have ##highlight''" . ($result[0][0]) . "##end## raid points.");
 				return;
 			}
 
 			else if (!$this -> bot -> core("chat") -> get_uid($who))
 			{
-				$this -> bot -> send_tell ($name, "Player <font color=#ffff00>$who##end## does not exist.");
+				$this -> bot -> send_tell ($name, "Player ##highlight##$who##end## does not exist.");
 				return;
 			}
 			else
 			{
 				$this -> bot -> db -> query("UPDATE #___raid_points SET points = points - " . ($num) .
 				" WHERE id = " . $this -> points_to($name));
-				$this -> bot -> db -> query("INSERT INTO #___raid_points (id, points) VALUES (" . $this -> points_to($who) . ", $num) ON DUPLICATE KEY UPDATE points = points + VALUES(points)");
-				$this -> bot -> send_tell($name, "You gave <font color=#ffff00>$num##end## raidpoints to <font color=#ffff00>$who##end##.");
-				$this -> bot -> send_tell($who, "You got <font color=#ffff00>$num##end## raidpoints from <font color=#ffff00>$name##end##.");
+				$this -> bot -> db -> query("INSERT INTO #___raid_points (id, nickname, points) VALUES (" . $this -> points_to($who) . ", '".$this -> points_to_name($who)."', $num) ON DUPLICATE KEY UPDATE points = points + VALUES(points)");
+				$this -> bot -> send_tell($name, "You gave ##highlight##$num##end## raidpoints to ##highlight##$who##end##.");
+				$this -> bot -> send_tell($who, "You got ##highlight##$num##end## raidpoints from ##highlight##$name##end##.");
 				return;
 			}
 		}
 		else
 		{
-			$this -> bot -> send_tell($name, "Transfering points has been <font color=#ffff00>disabled##end##.");
+			$this -> bot -> send_tell($name, "Transfering points has been ##highlight##disabled##end##.");
 		}
 	}
 
@@ -374,84 +494,168 @@ class Points extends BaseActiveModule
 	/*
 	Adds points
 	*/
-	function add_points($name, $who, $num)
+	function add_points($name, $who, $num, $why, $silent=FALSE)
 	{
-	//	if ($this -> bot -> core("security") -> check_access($name, "superadmin"))
-	//	{
-			if (!is_numeric($num))
-			{
-				$this -> bot -> send_tell ($name, "$num is not a valid points value.");
-				return;
-			}
+		if (!is_numeric($num))
+		{
+			$this -> bot -> send_tell ($name, "$num is not a valid points value.");
+			return FALSE;
+		}
 
-			if (!$this -> bot -> core("chat") -> get_uid($who))
+		if (!$this -> bot -> core("chat") -> get_uid($who))
+		{
+			$this -> bot -> send_tell ($name, "Player ##highlight##$who##end## does not exist.");
+			return FALSE;
+		}
+		else
+		{
+			$this -> bot -> db -> query("INSERT INTO #___raid_points (id, nickname, points) VALUES (" . $this -> points_to($who) . ", '".$this -> points_to_name($who)."', $num) ON DUPLICATE KEY UPDATE points = points + VALUES(points)");
+			if(!$silent)
 			{
-				$this -> bot -> send_tell ($name, "Player <font color=#ffff00>$who##end## does not exist.");
-				return;
+				$this -> bot -> send_output("", "##highlight##$name##end## added ##highlight##$num##end## raidpoints to ##highlight##$who##end##'s account.", "both");
+				$this -> bot -> send_tell($name, "You added ##highlight##$num##end## raidpoints to ##highlight##$who##end##'s account.");
+				$this -> bot -> send_tell($who, "##highlight##$name##end## added ##highlight##$num##end## raidpoints to your account.($why)");
 			}
-			else
-			{
-				$this -> bot -> db -> query("INSERT INTO #___raid_points (id, points) VALUES (" . $this -> points_to($who) . ", $num) ON DUPLICATE KEY UPDATE points = points + VALUES(points)");
-				$this -> bot -> send_output("", "<font color=#ffff00>$name##end## added <font color=#ffff00>$num##end## raidpoints to <font color=#ffff00>$who##end##'s account.", "both");
-				$this -> bot -> send_tell($name, "You added <font color=#ffff00>$num##end## raidpoints to <font color=#ffff00>$who##end##'s account.");
-				$this -> bot -> send_tell($who, "<font color=#ffff00>$name##end## added <font color=#ffff00>$num##end## raidpoints to your account.");
-				return;
-			}
-	//	}
-	//	else
-	//	{
-	//		$this -> bot -> send_tell($name, "You must be a superadmin to do this");
-	//		return;
-	//	}
+			$this -> log($name, $who, $num, $why);
+			return TRUE;
+		}
 	}
 
 
 	/*
 	Remove points
 	*/
-	function rem_points($name, $who, $num)
+	function rem_points($name, $who, $num, $why, $silent=FALSE)
 	{
-		//if ($this -> bot -> core("security") -> check_access($name, "superadmin"))
-		//{
-			if (!is_numeric($num))
-			{
-				$this -> bot -> send_tell ($name, "$num is not a valid points value.");
-				return;
-			}
+		if (!is_numeric($num))
+		{
+			$this -> bot -> send_tell ($name, "$num is not a valid points value.");
+			return FALSE;
+		}
 
-			if (!$this -> bot -> core("chat") -> get_uid($who))
+		if (!$this -> bot -> core("chat") -> get_uid($who))
+		{
+			$this -> bot -> send_tell ($name, "Player ##highlight##$who##end## does not exist.");
+			return FALSE;
+		}
+		else
+		{
+			$this -> bot -> db -> query("UPDATE #___raid_points SET points = points - " . ($num) .
+			" WHERE id = " . $this -> points_to($who));
+			if(!$silent)
 			{
-				$this -> bot -> send_tell ($name, "Player <font color=#ffff00>$who##end## does not exist.");
-				return;
+				$this -> bot -> send_output("", "##highlight##$name##end## removed ##highlight##$num##end## raidpoints from ##highlight##$who##end##'s account.", "both");
+				$this -> bot -> send_tell($name, "You removed ##highlight##$num##end## raidpoints from ##highlight##$who##end##'s account.");
+				$this -> bot -> send_tell($who, "##highlight##$name##end## removed ##highlight##$num##end## raidpoints from your account. ($why)");
 			}
-			else
-			{
-				$this -> bot -> db -> query("UPDATE #___raid_points SET points = points - " . ($num) .
-				" WHERE id = " . $this -> points_to($who));
-				$this -> bot -> send_output("", "<font color=#ffff00>$name##end## removed <font color=#ffff00>$num##end## raidpoints from <font color=#ffff00>$who##end##'s account.", "both");
-				$this -> bot -> send_tell($name, "You removed <font color=#ffff00>$num##end## raidpoints from <font color=#ffff00>$who##end##'s account.");
-				$this -> bot -> send_tell($who, "<font color=#ffff00>$name##end## removed <font color=#ffff00>$num##end## raidpoints from your account.");
-				return;
-			}
-		//}
-		//else
-		//{
-		//	$this -> bot -> send_tell($name, "You must be a superadmin to do this");
-		//	return;
-		//}
+			$this -> log($name, $who, "-".$num, $why);
+			return TRUE;
+		}
 	}
 
 
 	/*
 	Get correct char for points
 	*/
-	function points_to($name)
+	function points_to($name, $tomain=TRUE)
 	{
-		if (!$this -> bot -> core("settings") -> get("Points", "To_main"))
+		if (!$tomain || !$this -> bot -> core("settings") -> get("Points", "To_main"))
 			return $this -> bot -> core("chat") -> get_uid($name);
 
 		$main = $this -> bot -> core("alts") -> main($name);
 		return $this -> bot -> core("chat") -> get_uid($main);
+	}
+
+	function points_to_name($name, $tomain=TRUE)
+	{
+		if (!$tomain || !$this -> bot -> core("settings") -> get("Points", "To_main"))
+			return $name;
+
+		return $this -> bot -> core("alts") -> main($name);
+	}
+
+	function log($name, $who, $num, $why)
+	{
+		$name = ucfirst(strtolower($name));
+		$who = ucfirst(strtolower($who));
+		$this -> bot -> db -> query("INSERT INTO #___raid_points_log (name, points, by_who, time, why) VALUES ('$who', $num, '$name', ".time().", '".mysql_real_escape_string($why)."')");
+	}
+
+	function view_log($name, $timeorname, $time2)
+	{
+		if(!$timeorname)
+			$timeorname = $name;
+		if(!is_numeric($timeorname))
+		{
+			$main = $this -> bot -> core("alts") -> main($timeorname);
+			$alts = $this -> bot -> core("alts") -> get_alts($main);
+			if(strtolower($main) == strtolower($name))
+				$ownlogs = TRUE;
+			else
+			{
+				if(!empty($alts))
+				{
+					foreach($alts as $alt)
+					{
+						if(strtolower($alt) == strtolower($name))
+							$ownlogs = TRUE;
+					}
+				}
+			}
+		}
+			
+		if ($ownlogs || $this -> bot -> core("security") -> check_access($name, "superadmin"))
+		{
+			if(is_numeric($timeorname))
+			{
+				return("point logs view by time disabled");
+				//if(!empty($time2))
+				//{
+				//	if(!is_numeric($time2))
+				//		Return("Error: 2nd time
+				$field = "time";
+				$value = "> ".time() - ($timeorname * 60 * 60);
+				$for = "last $timeorname hours";
+			}
+			else
+			{
+				$field = "name";
+				$value = "= '$main'";
+				if(!empty($alts))
+				{
+					foreach($alts as $alt)
+						$value .= " OR $field = '$alt'";
+				}
+				$for = "$main and his alts";
+			}
+			$logs = $this -> bot -> db -> select("SELECT name, points, by_who, time, why FROM #___raid_points_log WHERE $field ".$value." ORDER BY time DESC, id");
+			if(!empty($logs))
+			{
+				$inside = " :: Logs for $for ::##seablue##";
+				foreach($logs as $log)
+				{
+					if($log[1] >= 0)
+						$color = "green";
+					else
+						$color = "red";
+					$inside .= "\n\n".gmdate($this -> bot -> core("settings") -> get("Time", "FormatString"), $log[3]) . " GMT";
+					$inside .= "\n##highlight##".$log[0]."##end##: ##$color##".$log[1]."##end## points by ##highlight##".$log[2]."##end## (".$log[4].")";
+				}
+				return ("Logs for $for :: " . $this -> bot -> core("tools") -> make_blob("click to view", $inside));
+			}
+			else
+				Return("No logs Found for $for");
+		}
+		else
+			Return("You must be an ##highlight##superadmin##end## to view others point logs");
+	}
+
+	function round($num)
+	{
+		$num2 = explode(".", $num, 2);
+		if($num2[1] == "00")
+			$num = $num2[0];
+		return $num;
 	}
 }
 ?>
